--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
-html {
-  height: 100%;
-  width: 100%;
+.dice-container {
+  display: flex;
+}
+
+.dice {
+  width: 80px;
+  height: 80px;
+  position: relative;
+  margin: 5px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+}
+
+.dice-dot {
+  width: 15px;
+  height: 15px;
+  background-color: #000000;
+  border-radius: 50%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.btn-roll-dice {
+  margin-top: 10px;
 }
